balance optimization; create address lists; discord query
